# applications

./: .gitignore  README.md
arduino/: Blink.cpp  README.md  avr-uno.txt  format.sh  meson.build  meson_options.txt  upload.sh
arduino/ArduinoCore-avr/libraries/Adafruit-GFX-Library/: Adafruit_GFX.h
arduino/ArduinoCore-avr/libraries/Adafruit_SSD1306/: Adafruit_SSD1306.cpp
arduino/ArduinoCore-avr/libraries/Arduino-I2CScanner/src/: I2CScanner.h
arduino/src/: main.cpp
arphaxad/iot-esp32/main/: CMakeLists.txt
blog/: Dockerfile  README.md  docker-compose.yml  meson.build  publish.sh
blog/resources/database/: 000-init.sql  001-init.sql  002-seed.sql  003-seed.sql  004-seed.sql  init.sql  seed.js
blog/src/: connectionPool.cpp  dbConnection.cpp  main.cpp  project.hpp.in
blog/src/include/: connectionPool.hpp  constants.h  dbConnection.hpp  environment.hpp  httpServer.hpp  page.hpp  post.hpp
blog/subprojects/: libpqxx.wrap
blog/subprojects/mongo-c-driver/: ssdlc_compliance_report.md
blog/subprojects/mongo-c-driver/src/libbson/: CMakeLists.txt
blog/subprojects/mongo-cxx-driver/: CMakeLists.txt
boost-ci-cd/: Dockerfile  meson.build
boost-ci-cd/src/: main.cpp
boost-json/: README.md  boost-json.kdev4  format.sh  main.cpp  meson.build
boost-modsecurity/: README.md  meson.build
boost-modsecurity/rules/owasp-crs/: crs-setup.conf  crs-setup.conf.custom
boost-modsecurity/src/: common.hpp  httpServer.cpp  httpServer.hpp  main.cpp  modSecurityFilter.cpp  modSecurityFilter.hpp
currency-converter/: .editorconfig  .gitignore  Dockerfile  currency-converter.kdev4  format.sh  main.cpp  meson.build
currency-converter/resources/docker/: app.run
currency-converter/src/: app.cpp  main.cpp
currency-converter/src/include/: app.h
http-server-stackless/: README.md  http-server-stackless.kdev4  meson.build
http-server-stackless/src/: main.cpp
langchain-gemini/: README.md  main.py  pyproject.toml  winner.py
langchain-gemini/data/: mlb_teams_2012.csv
lua/template/: meson.build
lua/template/src/: main.cpp
lua/vrp/: .gitignore  meson.build
lua/vrp/src/: main.cpp
lua/vrp/subprojects/: luasocket.wrap
nmea-gps/: README.md  main.cpp  meson.build  nmea_log.txt
nmea-gps/include/: Arduino.h  TinyGPS++.cpp
nmea-gps/include/nmea/: gga.cpp  gll.cpp  gsa.cpp  gsv.cpp  parse.cpp  sentence.cpp
nmea-gps/resources/nematode/: meson.build
nmea-gps/subprojects/: NemaTode.wrap
quic/quic-rproxy/: README.md  meson.build
quic/quic-rproxy/client/: client.c  main.cpp  meson.build
quic/quic-rproxy/server/: meson.build
quic/quic-rproxy/subprojects/: boringssl.wrap  lsquic.wrap
seastar/: .gitignore  CMakeLists.txt  benchmark.py  build.sh  compile.sh  concurrent-demo.cc  coroutine-tcp.cc  deps.sh  filewriter.cc  format.sh  hello.cc  main.cc  multitask.cc  sharded_parameter_demo.cc  tcp-server.cc  timeout.cc
tui/template/: README.md  main.cpp  meson.build
vibecoding/commander/: CMakeLists.txt
vibecoding/commander/include/dispatcher/: abort_controller.hpp  io_uring_context.hpp  task_dispatcher.hpp
vibecoding/commander/include/net/: git_client.hpp  http_client.hpp
vibecoding/commander/include/utils/: timeout.hpp
vibecoding/commander/src/: main.cpp
vibecoding/commander/src/dispatcher/: abort_controller.cpp  io_uring_context.cpp  task_dispatcher.cpp
vibecoding/commander/src/net/: git_client.cpp  http_client.cpp
vibecoding/commander/src/utils/: timeout.cpp
vibecoding/commander/tests/: CMakeLists.txt  test_abort_controller.cpp  test_io_uring_context.cpp  test_main.cpp  test_task_dispatcher.cpp
vibecoding/lua_ftxui/: .gitignore  CMakeLists.txt  README.md
vibecoding/lua_ftxui/scripts/: ui.lua
vibecoding/lua_ftxui/src/: lua_ftxui.cpp  lua_ftxui.hpp  main.cpp
vibecoding/mcpcc/: .gitignore  meson.build
vibecoding/mcpcc/scripts/: format.awk  format.sh  format_json.sh  test_mcp.sh
vibecoding/mcpcc/src/: main.cpp
vibecoding/neotui/: .gitignore  meson.build  musl-cross.txt
vibecoding/neotui/config/: init.lua
vibecoding/neotui/include/: api.hpp  bridge.hpp  config.hpp  editor.hpp  helpers.hpp  plugins.hpp  scroller.hpp  tui.hpp
vibecoding/neotui/plugins/: api.lua  init.lua  json.lua  panel.lua  process.lua  workspace.lua
vibecoding/neotui/references/: .gitignore
vibecoding/neotui/src/: api.cpp  bridge.cpp  config.cpp  editor.cpp  main.cpp  plugins.cpp  scroller.cpp  tui.cpp
vibecoding/neotui/subprojects/: ftxui.wrap
vibecoding/stackless/https-server/: .gitignore  format.sh  main.cpp  meson.build  test.sh  timeouts-test-suite.sh
vibecoding/tls-uv-server/: CMakeLists.txt  main.cpp
vibecoding/turbotui/: meson.build
vibecoding/turbotui/src/: main.cpp
vibecoding/uv-svc/: .gitignore  CMakeLists.txt  build.sh  main.cpp
vibecoding/uv-svc/include/uvsvc/: Application.hpp  BackgroundLoop.hpp  Helpers.hpp  HttpClient.hpp  JsonParser.hpp  SafeOutput.hpp
vibecoding/uv-svc/src/: Application.cpp  BackgroundLoop.cpp  Helpers.cpp  HttpClient.cpp  JsonParser.cpp  SafeOutput.cpp  main.cpp
vibecoding/worktui/: meson.build
vibecoding/worktui/src/: app.cpp  app.hpp  main.cpp  text_editor.cpp  text_editor.hpp
wasm/ipfg/: .gitignore  README.md  meson.build  meson_options.txt  package.json  pnpm-lock.yaml
wasm/ipfg/cross/: wasm-backup.txt  wasm-wasi.txt
wasm/ipfg/data/: ip_ranges_wasm.s  ip_strings_wasm.s
wasm/ipfg/deployment/: Dockerfile  wrangler.toml
wasm/ipfg/scripts/: build.sh  compile.sh  generate.py  pyproject.toml  requirements.txt  upload-wasm.sh  wasmobj.sh
wasm/ipfg/shims/: index.js
wasm/ipfg/src/: main.cpp
wasm/pergamos/: .gitignore  README.md  meson.build  package.json  pnpm-lock.yaml  wrangler.toml
wasm/pergamos/cross/: wasm.txt
wasm/pergamos/patches/: asn.h.patch  random.c.patch
wasm/pergamos/patches/wolfcrypt/src/: random.c
wasm/pergamos/patches/wolfssl/wolfcrypt/: asn.h
wasm/pergamos/shims/: index.js
wasm/pergamos/src/: environment.hpp  main.cpp  user_settings.h
wasm/sardis/: .gitignore  README.md  meson.build
wasm/sardis/cross/: wasm-wasi.txt
wasm/sardis/src/: entrypoint.cpp  main.cpp
(+378 files in other folders)
