[project]
name = "langchain-gemini"
version = "0.1.0"
description = "AI project using LangChain and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.6",
    "pandas>=2.3.0",
    "tabulate>=0.9.0",
]
